Adding Tabel Store Swagger Documentation
